[package]
name = "ieee80211"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"


[dependencies]
eui48 = { git = "https://github.com/readysettech/eui48.git", features = ["serde"]}
byteorder = "1.3.4"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "main_benchmark"
harness = false
